--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.datasource.url=jdbc:mysql://database-1.cljvjkjrufvd.us-east-1.rds.amazonaws.com:3306/staybooking?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=database0427
+jwt.secret=secret
