Added stayImage and Google cloud service for image store

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.url=jdbc:mysql://database-1.cljvjkjrufvd.us-east-1.rds.amazona
 spring.datasource.username=admin
 spring.datasource.password=database0427
 jwt.secret=secret
+gcs.bucket=staybooking-qinlong
+elasticsearch.address=34.173.163.48:9200
+elasticsearch.username=vincent
+elasticsearch.password=12345678
+geocoding.apikey=AIzaSyAd8PdCqeswP3F6f6I_U8DXZDqj3f4NSSA
