--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,11 @@
 			<artifactId>google-cloud-storage</artifactId>
 			<version>2.22.2</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
