--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://database-1.cljvjkjrufvd.us-east-1.rds.amazonaws.com:3306/staybooking?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://""/staybooking?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=database0427
 jwt.secret=secret
-gcs.bucket=staybooking-qinlong
+gcs.bucket=""
 elasticsearch.address=34.173.163.48:9200
 elasticsearch.username=vincent
 elasticsearch.password=12345678
-geocoding.apikey=AIzaSyAd8PdCqeswP3F6f6I_U8DXZDqj3f4NSSA
+geocoding.apikey=""
